--- a/analysis/GWAS_tissue_selection.Rmd
+++ b/analysis/GWAS_tissue_selection.Rmd
@@ -33,7 +33,7 @@ DT::datatable(matrix())
 
 ## Thin=1, shared_all
 ```{r, results='asis', echo = FALSE}
-for(i in names(sample_size)[2]){
+for(i in names(sample_size)){
   param <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E_thin1_shared_all/",i,"/",i,".thin1.shared_all.ctwas_null.param.RDS"))
   region_data <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E_thin1_shared_all/",i,"/",i,".region_data.thin1.RDS"))
   ctwas_parameters <- ctwas:::summarize_param(param,sample_size[[i]])
@@ -64,7 +64,7 @@ for(i in names(sample_size)[2]){
 ```
 ## Thin=1, shared_type
 ```{r, results='asis', echo = FALSE}
-for(i in names(sample_size)[2]){
+for(i in names(sample_size)){
   param <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E_thin1_shared_type/",i,"/",i,".thin1.shared_type.ctwas_null.param.RDS"))
   region_data <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E_thin1_shared_type/",i,"/",i,".region_data.thin1.RDS"))
   ctwas_parameters <- ctwas:::summarize_param(param,sample_size[[i]])
@@ -96,7 +96,7 @@ for(i in names(sample_size)[2]){
 
 ## Thin=0.1, shared_all
 ```{r, results='asis', echo = FALSE}
-for(i in names(sample_size)[2]){
+for(i in names(sample_size)){
   param <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E_thin0.1_shared_all/",i,"/",i,".thin0.1.shared_all.ctwas_null.param.RDS"))
   region_data <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E_thin0.1_shared_all/",i,"/",i,".region_data.thin0.1.RDS"))
   ctwas_parameters <- ctwas:::summarize_param(param,sample_size[[i]])
@@ -128,7 +128,7 @@ for(i in names(sample_size)[2]){
 
 ## Thin=0.1, shared_type
 ```{r, results='asis', echo = FALSE}
-for(i in names(sample_size)[2]){
+for(i in names(sample_size)){
   param <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E_thin0.1_shared_type/",i,"/",i,".thin0.1.shared_type.ctwas_null.param.RDS"))
   region_data <- readRDS(paste0("/project/xinhe/shengqian/all_tissues_screen/results_E_thin0.1_shared_type/",i,"/",i,".region_data.thin0.1.RDS"))
   ctwas_parameters <- ctwas:::summarize_param(param,sample_size[[i]])
